# project-chimera

./: .coderabbit.yaml  .gitignore  Dockerfile  MCP_verification.md  README.md  SUBMISSION.md  makefile  pyproject.toml  requirements.txt  run_test.py  submission.md
.cursor/: rules.md
.github/workflows/: ci.yml
research/: architecture_strategy.md  tooling_strategy.md  trend_research.py
scripts/: fetch_ethiopian_fashion.py  spec-check.sh  spec_check.py  validate_pr.py
skills/skill_content_generation/: README.md
skills/skill_social_posting/: README.md
skills/skill_trend_research/: README.md
specs/: _meta.md  api_contract.md  functional.md  openclaw_integration.md  technical.md
tests/: test_content_generation.py  test_social_posting.py  test_trend_research.py
